src/objects/Quote.object
<CustomObject>
    <fields>
        <fullName>Advance_ID__c</fullName>
        <formula>Opportunity.Advance_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Advance ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annual_CC_sales_Avg_4_Mo_times_12__c</fullName>
        <formula>Opportunity.Underwriting__r.Annual_CC_sales_Avg_4_Mo_times_12__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual CC sales (Avg 4 Mo. times 12)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Gross_sales_Avg_2_Mo_times_12__c</fullName>
        <formula>Opportunity.Underwriting__r.Annual_Gross_sales_Avg_2_Mo_times_12__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual Gross sales (Avg 2 Mo. times 12)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Applicant_1_FICO__c</fullName>
        <formula>BLANKVALUE(text(Opportunity.Underwriting__r.Applicant_1_FICO__c),&quot; &quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Applicant #1 FICO</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant_2_FICO__c</fullName>
        <formula>BLANKVALUE(text( Opportunity.Applicant_2_FICO__c ), &quot; &quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Applicant #2 FICO</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bankruptcy_Filings_In_The_Last_Year__c</fullName>
        <formula>BLANKVALUE(text( Opportunity.Individual_Bankruptcies__c ), &quot; &quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bankruptcy Filings In The Last Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Street__c</fullName>
        <formula>Opportunity.Account.BillingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BodyDeclReasCred__c</fullName>
        <formula>&quot;Thank you for your interest in &quot;&amp;if(Opportunity.RA_Company__c=&quot;RapidAdvance&quot;,&quot;selling your future credit card receivables to &quot;,&quot;obtaining a loan from &quot;)&amp;Opportunity.RA_Company__c&amp;&quot;. After carefully evaluating information about you and your company, we have decided &quot;&amp;if(Opportunity.RA_Company__c=&quot;RapidAdvance&quot;,&quot;not to purchase your future credit card receivables at this time.&quot;,&quot;to decline your application at this time.&quot;&amp;BR()
&amp;BR()
&amp;&quot;You have the right to receive a statement of reasons as to why your application was denied. To exercise this right, please contact us in writing within 60 days of the date of this letter at the following address:&quot;&amp;BR()
&amp;BR()
&amp;&quot;    Attn:  Customer Service&quot;&amp;BR()
&amp;&quot;    Small Business Financial Solutions, LLC&quot;&amp;BR()
&amp;&quot;    7316 Wisconsin Ave., Suite 350&quot;&amp;BR()
&amp;&quot;    Bethesda, MD 20814&quot;&amp;BR()
&amp;BR()
&amp;&quot;We will provide a statement of reasons within 30 days after receiving your request.&quot;)&amp;BR()
&amp;BR()
&amp;&quot;The reason for our decision was based in part on information obtained about you from the consumer reporting agency listed below.&quot;&amp;if(Opportunity.RA_Company__c=&quot;RapidAdvance&quot;,&quot; We are unable to supply specific reasons why we have decided not to purchase your future credit card receivables.&quot;,&quot;This agency did not make the decision to decline your application and is unable to provide you with the specific reasons as to why your application was declined.&quot;)&amp;&quot; You have a right under the Fair Credit Reporting Act to know the information contained in your credit file at the consumer reporting agency. It can be obtained by contacting:&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BodyDeclReasCred</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BodyDeclReasOther__c</fullName>
        <formula>&quot;Thank you for your interest in &quot;&amp;if(Opportunity.RA_Company__c=&quot;RapidAdvance&quot;,&quot;selling your future credit card receivables to &quot;,&quot;obtaining a loan from &quot;)&amp;Opportunity.RA_Company__c&amp;&quot;. After carefully evaluating information about you and your company, we have decided &quot;&amp;if(Opportunity.RA_Company__c=&quot;RapidAdvance&quot;,&quot;not to purchase your future credit card receivables at this time. We welcome the opportunity to re-evaluate your business at a future date.&quot;,&quot;to decline your application at this time.&quot;&amp;BR() 
&amp;BR() 
&amp;&quot;If requested by you, we will provide you with a statement of the specific reasons as to why we decided not to purchase your receivables. To obtain such a statement, please contact us in writing within 60 days of the date of this letter at the following address:&quot;&amp;BR() 
&amp;BR()
&amp;&quot; Attn: Customer Service&quot;&amp;BR() 
&amp;&quot; Rapid Financial Services, LLC&quot;&amp;BR() 
&amp;&quot; 7316 Wisconsin Ave., Suite 350&quot;&amp;BR() 
&amp;&quot; Bethesda, MD 20814&quot;&amp;BR() 
&amp;BR() 
&amp;&quot;We will provide a statement of reasons within 30 days after receiving your request.&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BodyDeclReasOther</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Bankruptcies__c</fullName>
        <formula>BLANKVALUE(text( Opportunity.Business_Bankruptcies__c ), &quot; &quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Bankruptcies</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Information__c</fullName>
        <formula>&quot;Legal Name: &quot;&amp; Opportunity.Account.Legal_Name__c &amp; BR() 
&amp; &quot;DBA Name: &quot;&amp; Opportunity.Account.Name &amp; BR() &amp; BR() 
&amp; &quot;Type of Entity: &quot;&amp;text( Opportunity.Type_of_Entity__c )&amp; BR() &amp; BR() 
&amp; &quot;Address:&quot;&amp; BR() 
&amp; Opportunity.Account.BillingStreet &amp; BR() 
&amp; Opportunity.Account.BillingCity &amp;&quot;, &quot;&amp; Opportunity.Account.BillingState &amp;&quot; &quot;&amp; Opportunity.Account.BillingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Information</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Status__c</fullName>
        <formula>BLANKVALUE(text( Opportunity.Business_Status__c ), &quot; &quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor_Advance_Company__c</fullName>
        <formula>BLANKVALUE( Opportunity.Competitor_Advance_Company__c , &quot; &quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Competitor Advance Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateNTime__c</fullName>
        <formula>CASE( MONTH( DATEVALUE(Now())), 1, &quot;January&quot;, 2, &quot;February&quot;, 3, &quot;March&quot;, 4, &quot;April&quot;, 5, &quot;May&quot;, 6, &quot;June&quot;, 7, &quot;July&quot;, 8, &quot;August&quot;, 9, &quot;September&quot;, 10, &quot;October&quot;, 11, &quot;November&quot;, 12, &quot;December&quot;, &quot;None&quot; )&amp;&quot; &quot;&amp; text(DAY( DATEVALUE(Now())))&amp;&quot;, &quot;&amp; text(YEAR( DATEVALUE(Now())))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DateNTime</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <formula>NOW()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Decline_Other_Reasons__c</fullName>
        <formula>&quot;Dear &quot;&amp; if( ISBLANK(Opportunity.Contact__c),&quot;Merchant&quot;, Opportunity.Contact__r.FirstName &amp;&quot; &quot;&amp;Opportunity.Contact__r.LastName) &amp;&quot;,&quot; &amp; BR()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Decline Other Reasons</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Does_the_Merchant_Own_Their_Home__c</fullName>
        <formula>BLANKVALUE(text( Opportunity.Underwriting__r.Does_the_Merchant_Own_Their_Home__c ), &quot; &quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Does the Merchant Own Their Home?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FaxNumberofContact__c</fullName>
        <formula>if(len(substitute(SUBSTITUTE( SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Opportunity.Contact__r.Fax, &quot;)&quot;,&quot;&quot;),&quot;(&quot;,&quot;&quot;), &quot;-&quot;,&quot;&quot;) ,&quot;.&quot;,&quot;&quot;),&quot; &quot;,&quot;&quot;))=10,&quot;1&quot;&amp;substitute(SUBSTITUTE( SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Opportunity.Contact__r.Fax, &quot;)&quot;,&quot;&quot;),&quot;(&quot;,&quot;&quot;), &quot;-&quot;,&quot;&quot;) ,&quot;.&quot;,&quot;&quot;),&quot; &quot;,&quot;&quot;)&amp;&quot;@fax.com&quot;,&quot;Not Provided&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FaxNumberofContact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month_2__c</fullName>
        <formula>&quot;Month: &quot;&amp;  text(Opportunity.Month_2__c)  &amp; BR() 
&amp; &quot;MEB: &quot;&amp;  Opportunity.MEB_2__c  &amp; BR() 
&amp; &quot;Monthly Gross Deposit 1: &quot;&amp;  text( Opportunity.Month_Average_Gross_Sales_2__c )  &amp; BR() 
&amp; &quot;Number of NSF 1: &quot;&amp;    Opportunity.NSF_2__c   &amp; BR() 
&amp; &quot;Monthly Average Balance 1: &quot;&amp;  text(Opportunity.Month_Average_Balance_2__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <formula>&quot;Month: &quot;&amp;  text(Opportunity.Month__c)  &amp; BR() 
&amp; &quot;MEB: &quot;&amp;  Opportunity.MEB__c  &amp; BR() 
&amp; &quot;Monthly Gross Deposit 1: &quot;&amp;  text(Opportunity.Month_Average_Gross_Sale_1__c)  &amp; BR() 
&amp; &quot;Number of NSF 1: &quot;&amp;    Opportunity.NSF__c   &amp; BR() 
&amp; &quot;Monthly Average Balance 1: &quot;&amp;  text(Opportunity.Month_Average_Balance_1__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewSigDeclReasCred__c</fullName>
        <formula>&quot;Sincerely,&quot;&amp;BR() 
&amp;BR()  
&amp;&quot;The RapidAdvance Team&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NewSigDeclReasCred</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Signature__c</fullName>
        <formula>&quot;Jeremy Brown&quot;&amp;BR()
&amp;&quot;President and CEO&quot;&amp;BR()
&amp;Opportunity.RA_Company__c&amp;BR()
&amp;BR()
&amp;BR()
&amp;&quot;P.S. When you are ready to renew your account with us just call our Customer Service Team or your Account Executive. They will prepare a quote and quickly get you funded - it’s just that simple!&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Signature</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_tradelines__c</fullName>
        <formula>Opportunity.CRR__r.TotalOfAllTrades__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of tradelines</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Oldest_Tradeline__c</fullName>
        <formula>Opportunity.CRR__r.OldestOpenDateOfATrade__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Oldest Tradeline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Number__c</fullName>
        <formula>Opportunity.Opportunity_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PaidOffLetter__c</fullName>
        <formula>&quot;Dear &quot;&amp; if( ISBLANK(Opportunity.Contact__c),&quot;Merchant&quot;, Opportunity.Contact__r.FirstName &amp;&quot; &quot;&amp;Opportunity.Contact__r.LastName) &amp;&quot;:&quot; &amp; BR()&amp; BR()
&amp;&quot;This letter is to inform you that you have paid your account off in full with &quot;&amp;Opportunity.RA_Company__c&amp;&quot;.  Your account was paid off on &quot;&amp; CASE( MONTH( Opportunity.Paid_Off_Date__c), 1, &quot;January&quot;, 2, &quot;February&quot;, 3, &quot;March&quot;, 4, &quot;April&quot;, 5, &quot;May&quot;, 6, &quot;June&quot;, 7, &quot;July&quot;, 8, &quot;August&quot;, 9, &quot;September&quot;, 10, &quot;October&quot;, 11, &quot;November&quot;, 12, &quot;December&quot;, &quot;None&quot; )&amp;&quot; &quot;&amp; text(DAY( Opportunity.Paid_Off_Date__c))&amp;&quot;, &quot;&amp; text(YEAR( Opportunity.Paid_Off_Date__c))&amp;&quot;. &quot;&amp;BR()&amp;BR()&amp;&quot;If you have any further questions or concerns, please contact me, Sheila Mensah, at 240.482.4694 or smensah@rapidadvance.com. &quot;&amp;BR() &amp; BR()
&amp;&quot;Thank you for selecting &quot;&amp;Opportunity.RA_Company__c&amp;&quot; to assist you with your financial needs. &quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PaidOffLetter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pay_Off_Letter__c</fullName>
        <formula>&quot;Re: 			&quot;&amp;Opportunity.DBA_Name__c&amp; BR() 
&amp;&quot;Billing Account # 	&quot;&amp; Opportunity.Account.Customer_Identification_Number__c&amp; BR() 
&amp;&quot;Balance:		$&quot;&amp; text(Opportunity.Remaining_Balance__c) &amp; BR() &amp; BR()
&amp;&quot;To whom it may concern,&quot;&amp;BR() &amp;BR()
&amp;&quot;The balance due from &quot;&amp;Opportunity.DBA_Name__c&amp;&quot; as of  &quot;&amp;CASE( MONTH( Opportunity.AsOfDate_for_Remaining_Balance__c ), 1, &quot;January&quot;, 2, &quot;February&quot;, 3, &quot;March&quot;, 4, &quot;April&quot;, 5, &quot;May&quot;, 6, &quot;June&quot;, 7, &quot;July&quot;, 8, &quot;August&quot;, 9, &quot;September&quot;, 10, &quot;October&quot;, 11, &quot;November&quot;, 12, &quot;December&quot;, &quot;None&quot; )&amp;&quot; &quot;&amp; text(DAY(  Opportunity.AsOfDate_for_Remaining_Balance__c ))&amp;&quot;, &quot;&amp; text(YEAR( Opportunity.AsOfDate_for_Remaining_Balance__c ))&amp;&quot; is reflected above, totaling $&quot;&amp;text(Opportunity.Remaining_Balance__c) &amp;&quot;.  Please make checks payable to &quot;&amp;Opportunity.RA_Company__c&amp;&quot;.  If wiring, the instructions are below:&quot;&amp;BR() &amp; BR()
&amp;&quot;Bank Name:                    &quot;&amp;&quot;Wells Fargo&quot;&amp; BR()
&amp;&quot;Bank Address:                1753 Pinnacle Drive, McLean, VA 22102&quot;&amp; BR()
&amp;&quot;ABA Routing Number: 121000248&quot;&amp; BR()
&amp;&quot;Beneficiary:             	  &quot;&amp;Opportunity.RA_Company__c&amp; BR()
&amp;&quot;Beneficiary Account:    &quot;&amp;IF(Opportunity.RA_Company__c = &quot;Small Business Financial Solutions LLC&quot;,&quot;4124114794&quot;,&quot;4123417610&quot;)&amp; BR()
&amp;&quot;Mailing Address:          7316 Wisconsin Avenue Suite#350 Bethesda, MD 20814&quot;&amp; BR() &amp;  BR()
&amp;&quot;Feel free to contact me if you have any questions or concerns.&quot;&amp; BR() &amp; BR()
&amp;&quot;Thanks in advance,&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pay Off Letter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payoff_Amount__c</fullName>
        <formula>BLANKVALUE( Opportunity.Payoff_Amount__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payoff Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ROI__c</fullName>
        <formula>Opportunity.Underwriting__r.Current_ROI__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ROI</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Remaining_Balance__c</fullName>
        <formula>BLANKVALUE(Opportunity.Underwriting__r.Remaining_Balance__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Renewal_Letter__c</fullName>
        <formula>&quot;Thank you for selecting &quot;&amp;Opportunity.RA_Company__c&amp;&quot; to meet your financing needs. Your username and password to access your account information via our website (www.rapidadvance.com) will remain the same as the username and password provided to you from your last transaction with us, which are:&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewal Letter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal_Number__c</fullName>
        <formula>BLANKVALUE(text(Opportunity.Renewal_Number__c), &quot;  &quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewal Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal_Signature__c</fullName>
        <formula>&quot;We look forward to serving your financial needs and we are pleased that you selected &quot;&amp;Opportunity.RA_Company__c&amp;&quot;.&quot;&amp;BR()
&amp;BR()
&amp;BR()
&amp;&quot;Sincerely,&quot;&amp;BR()
&amp;BR()
&amp;BR()
&amp;BR()
&amp;Opportunity.RA_Company__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewal Signature</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SignatureDeclReasCred__c</fullName>
        <formula>if(Opportunity.RA_Company__c=&quot;RapidAdvance&quot;,&quot;If requested by you, we will provide you with a statement of the specific reasons as to why we decided not to purchase your receivables.  To obtain such a statement, please contact us within 60 days of the date of this letter at the following address:&quot;&amp;BR()
&amp;BR()
&amp;&quot;Rapid Financial Services, LLC&quot;&amp;BR()
&amp;&quot;7316 Wisconsin Ave., Suite 350&quot;&amp;BR()
&amp;&quot;Bethesda, MD 20814&quot;&amp;BR()
&amp;&quot;Attn:  Director of Underwriting&quot;&amp;BR()
&amp;&quot;877-467-2743&quot;&amp;BR()
&amp;BR()
&amp;&quot;We will provide a statement of reasons to you within 30 days after receiving your request.&quot;&amp;BR()&amp;BR()&amp;BR(),&quot;The federal Equal Credit Opportunity Act prohibits creditors from discriminating against credit applicants on the basis of race, color, religion, national origin, sex, marital status, age (provided the applicant has the capacity to enter into a binding contract); because all or part of the applicant&apos;s income derives from any public assistance program; or because the applicant has in good faith exercised any right under the Consumer Credit Protection Act.  The federal agency that administers compliance with this law concerning this creditor is the Federal Trade Commission, Equal Credit Opportunity, Washington, DC 20580.&quot;&amp;BR()&amp;BR()&amp;BR())
&amp;&quot;Sincerely,&quot;&amp;BR() 
&amp;BR() 
&amp;BR() 
&amp;Opportunity.RA_Company__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SignatureDeclReasCred</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Syndication_Amount__c</fullName>
        <formula>BLANKVALUE( Opportunity.Syndication_Amount__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Syndication Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tax_Liens_Judgment_on_Business__c</fullName>
        <formula>BLANKVALUE(text( Opportunity.Tax_Liens_Judgment_on_Business__c ), &quot; &quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax Liens/Judgment on Business</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Liens_Open__c</fullName>
        <formula>BLANKVALUE(text( Opportunity.Tax_Liens_Open__c ),&quot; &quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax Liens Open</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ToWhom__c</fullName>
        <formula>Opportunity.Contact__r.FirstName &amp;&quot; &quot;&amp;Opportunity.Contact__r.LastName &amp; BR() 
&amp;Opportunity.DBA_Name__c&amp; BR() 
&amp; Opportunity.Account.BillingStreet &amp; BR() 
&amp;Opportunity.Account.BillingCity &amp;&quot;, &quot;&amp; Opportunity.Account.BillingState &amp;&quot; &quot;&amp; Opportunity.Account.BillingPostalCode &amp; BR() &amp; BR()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ToWhom</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Underwriter_Score__c</fullName>
        <formula>BLANKVALUE( text(Opportunity.Underwriting__r.Underwriter_s_Score__c ), &quot; &quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Underwriter Score</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Underwriting__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Underwriting</label>
        <referenceTo>Underwriting__c</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Welcome_Letter_2__c</fullName>
        <formula>&quot;We look forward to serving your financial needs and we are pleased that you have selected &quot;&amp;Opportunity.RA_Company__c&amp;if(Opportunity.RA_Company__c=&quot;RapidAdvance&quot;,&quot;, “The Smart Choice for Immediate Working Capital”SM.&quot;,&quot;.&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Welcome Letter 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Welcome_Letter__c</fullName>
        <formula>&quot;Thank you for selecting &quot;&amp;Opportunity.RA_Company__c&amp;&quot; to meet your financing needs. We welcome the opportunity to assist you by providing the working capital needed to strengthen and grow your business. Attached is a copy of the executed contract you signed.&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Welcome Letter</label>
        <type>Text</type>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>